# mould

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  bootstrap.js  common.js  crypto.ts  index.js  package.json  start-dev.bat  tsconfig.json  webpack.config.js
client/src/: app.rs  assets.rs  id_gen.rs  js.rs  lib.rs  logger.rs  pages.rs  route.rs
client/src/components/: alert.rs  button.rs  button_group.css  button_group.rs  center_middle.rs  checkbox.rs  checkbox_group.css  checkbox_group.rs  common_popup.css  common_popup.rs  confirm.rs  datetime_picker.css  datetime_picker.rs  dialog.rs  drawer.rs  file_upload.rs  files_upload.rs  focus_area.rs  hidden_file.rs  if.rs  image.rs  input.rs  loading.css  loading.rs  menu.rs  mock_select.css  mock_select.rs  mod.rs  modal_dialog.rs  monaco_editor.rs  page.rs  pagination.css  pagination.rs  popup_message.css  popup_message.rs  radio_group.rs  required.rs  rich_text.rs  running.rs  selection.rs  (+9 more)
client/src/css/: theme-default.less  theme.css
client/src/fragment/: change_password.rs  extension.rs  index.rs  mod.rs  sys_menu.rs
client/src/fragment/auth/: login.rs  login_or_register.rs  logout.rs  mod.rs  oauth2_authorize.rs  oidc_authorize.rs  register.rs  reset_password.rs
client/src/fragment/environment/: detail.rs  edit.rs  list.rs
client/src/fragment/environment_schema/: detail.rs  edit.rs  list.rs  mod.rs
client/src/fragment/job/: detail.rs  edit.rs  list.rs  mod.rs  start_job.rs
client/src/fragment/job_record/: detail.rs  list.rs
client/src/fragment/user/: detail.rs  invite.rs  list.rs  mod.rs
client/src/utils/: ajax.rs  binding.rs  handle.rs  list.rs  mod.rs  request.rs  validator.rs
client/static/: index.html
client/static/lib/css/: base.css
client/static/lib/rich-text/: rich-text.css  rich-text.js  rich-text.js.map
extension-sdk/: Cargo.toml
extension-sdk/src/: lib.rs  pluginator.rs
extensions/cloudflare_pages/: Cargo.toml
extensions/cloudflare_pages/src/: lib.rs
extensions/cloudflare_pages/src/config/: mod.rs  origin.rs
extensions/cloudflare_pages/src/operation/: mod.rs  test.rs
extensions/etcd/: Cargo.toml
extensions/etcd/src/: lib.rs
extensions/etcd/src/config/: mod.rs  origin.rs
extensions/etcd/src/operation/: mod.rs  test.rs
extensions/kubernetes/: Cargo.toml
extensions/kubernetes/src/: lib.rs
extensions/kubernetes/src/config/: mod.rs  origin.rs
extensions/kubernetes/src/operation/: mod.rs  test.rs
extensions/mysql/: Cargo.toml
extensions/mysql/src/: lib.rs
extensions/mysql/src/config/: mod.rs  origin.rs
extensions/mysql/src/operation/: mod.rs  test.rs
extensions/nacos/: Cargo.toml
extensions/nacos/src/: lib.rs
extensions/nacos/src/config/: mod.rs  origin.rs
extensions/nacos/src/operation/: mod.rs
extensions/postgresql/: Cargo.toml
extensions/postgresql/src/: lib.rs
extensions/postgresql/src/config/: origin.rs
extensions/postgresql/src/operation/: mod.rs  test.rs
extensions/s3/: Cargo.toml
extensions/s3/src/: lib.rs
extensions/s3/src/config/: mod.rs  origin.rs
extensions/s3/src/operation/: mod.rs  test.rs
extensions/server/: Cargo.toml
extensions/server/src/: lib.rs
extensions/server/src/config/: mod.rs  origin.rs
extensions/server/src/operation/: mod.rs  test.rs
models/: Environment.json  (+12 more)
server/: Cargo.toml  build.rs
server-sdk/: Cargo.toml
server-sdk/src/: lib.rs  storage.rs  task.rs
server-sdk/src/auth/: change_password.rs  get_curr_user.rs  get_nonce.rs  get_openid_providers.rs  get_rsa_pub_key.rs  get_salt.rs  login.rs  login_by_oauth2_code.rs  login_by_openid_code.rs  logout.rs  mod.rs  register.rs  reset_password.rs  send_email_captcha.rs
server-sdk/src/environment/: delete_environment.rs  insert_environment.rs  mod.rs  query_environment.rs  read_environment.rs  update_environment.rs
server-sdk/src/environment_schema/: delete_environment_schema.rs  mod.rs  query_environment_schema.rs  read_environment_schema.rs  save_environment_schema.rs
server-sdk/src/extension/: mod.rs  query_extension.rs  test_configuration.rs
server-sdk/src/job/: continue_job.rs  delete_job.rs  insert_job.rs  mod.rs  query_job.rs  read_job.rs  start_job.rs  update_job.rs
server-sdk/src/job_record/: mod.rs  query_job_record.rs  read_job_record.rs
server-sdk/src/system/: get_system_info.rs  mod.rs
server-sdk/src/user/: invite_user.rs  mod.rs  query_user.rs  read_user.rs
server-sdk/src/utils/: hmac_sha.rs  mod.rs  pbkdf2.rs
server-sdk/src/utils/sha_hash/: sha256.rs
server/env/: config.json5  log4rs.yaml  mould.service  rsa-pri-key.pem  rsa-pub-key.pem  start.bat  start.sh
server/env/email_template/: register_captcha.tmpl  reset_password_captcha.tmpl
server/src/: main.rs  route.rs
server/src/action/: mod.rs
server/src/action/auth/: change_password.rs  get_curr_user.rs  get_nonce.rs  get_openid_providers.rs  get_rsa_pub_key.rs  get_salt.rs  login.rs  login_by_oauth2_code.rs  login_by_openid_code.rs  logout.rs  mod.rs  register.rs  reset_password.rs  send_email_captcha.rs
server/src/action/environment/: delete_environment.rs  insert_environment.rs  mod.rs  query_environment.rs  read_environment.rs  update_environment.rs
server/src/action/environment_schema/: delete_environment_schema.rs  mod.rs  query_environment_schema.rs  read_environment_schema.rs  save_environment_schema.rs
server/src/action/extension/: mod.rs  query_extension.rs  test_configuration.rs
server/src/config/: args.rs  mod.rs  origin.rs
server/src/context/: extension.rs  mod.rs
server/src/daemon/: http.rs
server/src/middleware/: auth.rs  context.rs  mod.rs  session.rs  time_stat.rs
server/src/model/: environment.rs  environment_resource.rs  environment_schema.rs  environment_schema_resource.rs  external_user.rs  job.rs  job_record.rs  job_step.rs  job_step_record.rs  job_step_resource_record.rs  mod.rs  organization.rs  system_user.rs  user.rs
server/src/native_common/: cache_mgr.rs  cookie.rs  errno.rs  mod.rs  model.rs
server/src/service/: environment.rs  environment_schema.rs  external_user.rs  job.rs  job_record.rs  mod.rs
(+81 files in other folders)
