[package]
name = "mould-client"
version = "0.1.0"
authors = ["omega"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
log = "0.4"
async-trait = "0.1"
futures = "0.3"
chrono = { version = "0.4.10", features = ["serde"] }
serde = "1"
serde_derive = "1"
# serde_json is just for the example, not required in general
serde_json = "1.0"
base64 = "0.22"
form_urlencoded = "1"
wasm-bindgen = "0.2"
js-sys = "0.3.36"
web-sys = { version = "0.3", features = ["Headers", "XmlHttpRequest", "XmlHttpRequestResponseType", "XmlHttpRequestEventTarget", "XmlHttpRequestUpload", "Request",  "RequestInit",  "RequestMode",  "Response",  "Window", "Event", "InputEvent", "HtmlSelectElement", "CssStyleDeclaration", "HtmlElement"] }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
gloo = { version = "0.11", features = ["timers"] }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
anyhow = "1"
tihu = "0.1.3"
uuid = "1"
server-sdk = { path="../server-sdk" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
