[package]
name = "server-sdk"
version = "0.1.0"
authors = ["omega"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bytes = "1"
byteorder = "1"
chrono = { version = "0.4.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.12", features = ["derive"] }
serde_json = "1.0"
tihu = "0.1.3"
object-storage-sdk = "0.1.2"