[package]
name = "mould-server"
version = "0.1.0"
authors = ["omega"]
edition = "2018"

[[bin]]
name = "mould"
path = "src/main.rs"

[dependencies]
lazy_static = "1"
log = "0.4"
log4rs = "1"
bytes = "1"
async-trait = "0.1"
futures = "0.3"
http = "1"
anyhow = "1"
headers = "0.4.0"
rsa = "0.9.6"
native-tls = "0.2"
rust-crypto = "0.2"
parking_lot = "0.12.3"
signature = "2.2.0"
sha2 = { version = "0.10", features = ["oid"] }
base64 = "0.22.1"
uuid = { version = "1", features = ["v4", "v7"] }
serde = { version = "1.0", features = ["derive"] }
json5 = "0.4"
serde_json = "1.0"
rand = "0.8"
deadpool = "0.12.1"
deadpool-redis = "0.18"
deadpool-postgres = "0.14.0"
chrono = { version = "0.4", features = ["serde"] }
format_xml = "=0.1.4"
jsonpath_lib = "0.3"
v8 = "0.106.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }
postgres-native-tls = "0.5"
tempfile = "3"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
sync_wrapper = { version = "1", features = ["futures"] }
pin-project = "1"
http-body-util = "0.1"
multer = "3"
hyper-util = { version = "0.1", features = ["tokio", "server", "http1", "http2"] }
hyper = { version = "1", features = ["http1", "http2", "server"] }
tihu = "0.1.3"
tihu-native = "0.1"
lettre = {version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"]}
aws-types = "1"
aws-smithy-http = "0.60"
aws-sdk-s3 = "0.39"
rust-embed = "8"
mime_guess = "2"
form_urlencoded = "1"
url = "2"
oauth2 = "4"
openid = "0.13"
tera = "1"
object-storage-lib = "0.1.7"
server-sdk = { path="../server-sdk" }
mould-extension-sdk = { path="../extension-sdk" }