[package]
name = "cloudflare-pages-extension"
version = "0.1.0"
authors = ["omega"]
edition = "2018"

[lib]
name = "cloudflare_pages"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs"] }
zip = "2"
mime_guess = "2"
base64 = "0.22"
headers = "0.4.0"
blake3 = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
mould-extension-sdk = { path="../../extension-sdk" }