[package]
name = "etcd-extension"
version = "0.1.0"
authors = ["omega"]
edition = "2018"

[lib]
name = "etcd"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
json5 = "0.4"
etcd-rs = "1"
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
mould-extension-sdk = { path="../../extension-sdk" }