[package]
name = "mysql-extension"
version = "0.1.0"
authors = ["omega"]
edition = "2018"

[lib]
name = "mysql"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
mysql_async = "0.34"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs"] }
mould-extension-sdk = { path="../../extension-sdk" }