[package]
name = "nacos-extension"
version = "0.1.0"
authors = ["omega"]
edition = "2018"

[lib]
name = "nacos"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
nacos-sdk = { version = "0.4", features = ["default"] }
java-properties = "2"
mould-extension-sdk = { path="../../extension-sdk" }