[package]
name = "postgresql-extension"
version = "0.1.0"
authors = ["omega"]
edition = "2018"

[lib]
name = "postgresql"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs"] }
tokio-postgres = { version = "0.7" }
native-tls = "0.2"
postgres-native-tls = "0.5"
mould-extension-sdk = { path="../../extension-sdk" }