[package]
name = "server-extension"
version = "0.1.0"
authors = ["omega"]
edition = "2018"

[lib]
name = "server"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
json5 = "0.4"
uuid = { version = "1", features = ["v4"] }
ssh2 = { version = "0.9", features = ["vendored-openssl", "openssl-on-win32"] }
mould-extension-sdk = { path="../../extension-sdk" }